--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
 install:
   - git clone https://github.com/openai/gym-http-api.git /tmp/gym-http-api
   - sudo pip install -r /tmp/gym-http-api/requirements.txt
-  - python /tmp/gym-http-api/gym_http_server.py
+  - python /tmp/gym-http-api/gym_http_server.py &
   - source tests/travis/setup.sh
 # uncomment the following lines to override the default test script
 #script:
